--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Deployment tests for Security Headers",
   "main": "App.js",
   "scripts": {
-    "test": "node App.js"
+    "app": "node App.js",
+    "test": "jest /tests/CheckHeaders.test.js"
   },
   "author": "Laurence Dale",
   "license": "ISC",
   "dependencies": {
-    "check-my-headers": "^0.1.1",
+    "axios": "^0.24.0",
+    "check-my-headers": "^0.1.1"
+  },
+  "devDependencies": {
     "jest": "^27.4.7"
   }
 }
