--- a/ci-config.json
+++ b/ci-config.json
@@ -1,3 +1,6 @@
 {
-    "app-url": "https://juice-shop.herokuapp.com/#/"
+    "alt-url": "https://google.com",
+    "app-url": "https://juice-shop.herokuapp.com/"
 }
+
+
